--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvitems.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvitems.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="liveTvItemsPage" data-role="page" class="page libraryPage liveTvPage" data-contextname="${HeaderLiveTv}" data-require="scripts/livetvitems,scripts/queryfilters">
+    <div id="liveTvItemsPage" data-role="page" class="page libraryPage liveTvPage" data-contextname="${HeaderLiveTv}" data-require="scripts/livetvitems,scripts/queryfilters,livetvcss">
         <div class="libraryViewNav">
             <a href="livetvsuggested.html" class="ui-btn-active"><i class="material-icons">info</i>${TabSuggestions}</a>
             <a href="livetvguide.html"><i class="material-icons">grid_on</i>${TabGuide}</a>
