--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvrecordinglist.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvrecordinglist.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="liveTvRecordingListPage" data-role="page" class="page libraryPage liveTvPage" data-contextname="${HeaderLiveTv}" data-require="scripts/livetvrecordinglist">
+    <div id="liveTvRecordingListPage" data-role="page" class="page libraryPage liveTvPage" data-contextname="${HeaderLiveTv}" data-require="scripts/livetvrecordinglist,livetvcss">
         <div class="libraryViewNav">
             <a href="livetvsuggested.html"><i class="material-icons">info</i>${TabSuggestions}</a>
             <a href="livetvguide.html"><i class="material-icons">grid_on</i>${TabGuide}</a>
