--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvrecordings.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvrecordings.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="liveTvRecordingsPage" data-role="page" class="page libraryPage liveTvPage" data-contextname="${HeaderLiveTv}" data-require="scripts/livetvrecordings,paperbuttonstyle">
+    <div id="liveTvRecordingsPage" data-role="page" class="page libraryPage liveTvPage" data-contextname="${HeaderLiveTv}" data-require="scripts/livetvrecordings,paperbuttonstyle,livetvcss">
 
         <div class="libraryViewNav">
             <a href="livetvsuggested.html"><i class="material-icons">info</i>${TabSuggestions}</a>
