--- a/MediaBrowser.WebDashboard/dashboard-ui/metadata.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/metadata.html
@@ -4,7 +4,7 @@
     <title>${TitleMetadata}</title>
 </head>
 <body>
-    <div id="metadataConfigurationPage" data-role="page" class="page type-interior metadataConfigurationPage" data-require="scripts/metadataconfigurationpage">
+    <div id="metadataConfigurationPage" data-role="page" class="page type-interior metadataConfigurationPage" data-require="scripts/metadataconfigurationpage,paperbuttonstyle">
 
         <div data-role="content">
 
@@ -46,12 +46,11 @@
                             <select name="selectCountry" id="selectCountry" data-mini="true" required="required"></select>
                         </li>
                         <li>
-                            <button type="submit" data-theme="b" data-icon="check" data-mini="true">
-                                ${ButtonSave}
+                            <button type="submit" data-role="none" class="clearButton">
+                                <paper-button raised class="submit block"><iron-icon icon="check"></iron-icon><span>${ButtonSave}</span></paper-button>
                             </button>
-                            <button type="button" onclick="Dashboard.navigate('dashboard.html');" data-icon="delete" data-mini="true">
-                                ${ButtonCancel}
-                            </button>
+
+                            <paper-button raised class="cancel block btnCancel" onclick="history.back();"><iron-icon icon="close"></iron-icon><span>${ButtonCancel}</span></paper-button>
                         </li>
                     </ul>
                 </form>
