--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvguide.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvguide.html
@@ -34,12 +34,7 @@
             </div>
             <div class="guideRequiresUnlock readOnlyContent" style="margin:1em auto;text-align:center;display:none;padding:1em;">
                 <p class="unlockText"></p>
-                <button class="btn btnActionAccent btnUnlockGuide" data-role="none" type="button">
-                    <span>
-                        ${ButtonUnlockGuide}
-                    </span>
-                    <i class="fa fa-check"></i>
-                </button>
+                <paper-button raised class="secondary block btnUnlockGuide"><iron-icon icon="check"></iron-icon><span>${ButtonUnlockGuide}</span></paper-button>
             </div>
         </div>
     </div>
