--- a/MediaBrowser.WebDashboard/dashboard-ui/nowplaying.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/nowplaying.html
@@ -148,11 +148,11 @@
             </div>
         </div>
 
-        <div data-role="popup" id="popupAudioTrackMenu" data-transition="flip">
+        <div data-role="popup" id="popupAudioTrackMenu">
             <div class="trackList"></div>
         </div>
 
-        <div data-role="popup" id="popupSubtitleTrackMenu" data-transition="flip">
+        <div data-role="popup" id="popupSubtitleTrackMenu">
             <div class="trackList"></div>
         </div>
 
