--- a/MediaBrowser.WebDashboard/dashboard-ui/scheduledtasks.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/scheduledtasks.html
@@ -10,7 +10,7 @@
 
                 <div class="readOnlyContent">
                     <p>${ScheduledTasksHelp}</p>
-                    <div id="divScheduledTasks"></div>
+                    <div class="divScheduledTasks"></div>
                 </div>
             </div>
         </div>
