--- a/MediaBrowser.WebDashboard/dashboard-ui/supporterkey.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/supporterkey.html
@@ -35,7 +35,7 @@
 
                         </div>
                         <p>
-                            <button type="submit" id="mbLegacyKeyBtn" data-theme="b" data-icon="check">Save</button>
+                            <button type="submit" id="mbLegacyKeyBtn" data-theme="b" data-icon="check">${ButtonSave}</button>
                         </p>
                     </form>
                     <br />
