--- a/MediaBrowser.WebDashboard/dashboard-ui/nowplaying.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/nowplaying.html
@@ -8,7 +8,7 @@
 
         <div data-role="content" style="overflow:visible;">
 
-            <paper-fab mini icon="arrow-back" class="subdued" onclick="history.back()" style="position:relative;top:5px;left:5px;"></paper-fab>
+            <paper-fab mini icon="arrow-back" class="white" onclick="history.back()" style="position:relative;top:5px;left:5px;"></paper-fab>
             <div style="float:right;position:relative;top:5px;right:5px;">
                 <span class="nowPlayingSelectedPlayer"></span>
                 <paper-fab mini icon="cast" class="blue nowPlayingCastIcon" onclick="MediaController.showPlayerSelection();" style="vertical-align:middle;"></paper-fab>
