--- a/MediaBrowser.WebDashboard/dashboard-ui/nowplaying.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/nowplaying.html
@@ -41,23 +41,23 @@
 
                             <div class="nowPlayingInfoButtons">
                                 <div>
-                                    <paper-fab icon="skip-previous" class="btnPreviousTrack btnPlayStateCommand large subdued square" title="${ButtonPreviousTrack}"></paper-fab>
-                                    <paper-fab icon="pause" class="btnPause btnPlayStateCommand large subdued square" title="${ButtonPause}"></paper-fab>
-                                    <paper-fab icon="play-arrow" class="btnPlay btnPlayStateCommand large subdued square" title="${ButtonPlay}"></paper-fab>
-                                    <paper-fab icon="stop" class="btnPlayStateCommand btnStop large subdued square" title="${ButtonStop}"></paper-fab>
-                                    <paper-fab icon="skip-next" class="btnPlayStateCommand btnNextTrack large subdued square" title="${ButtonNextTrack}"></paper-fab>
+                                    <paper-fab icon="skip-previous" class="btnPreviousTrack btnPlayStateCommand subdued" title="${ButtonPreviousTrack}"></paper-fab>
+                                    <paper-fab icon="pause" class="btnPause btnPlayStateCommand subdued" title="${ButtonPause}"></paper-fab>
+                                    <paper-fab icon="play-arrow" class="btnPlay btnPlayStateCommand subdued" title="${ButtonPlay}"></paper-fab>
+                                    <paper-fab icon="stop" class="btnPlayStateCommand btnStop subdued" title="${ButtonStop}"></paper-fab>
+                                    <paper-fab icon="skip-next" class="btnPlayStateCommand btnNextTrack subdued" title="${ButtonNextTrack}"></paper-fab>
                                 </div>
                                 <div>
-                                    <paper-fab icon="volume-up" class="btnCommand large subdued square" title="${ButtonVolumeUp}" data-command="VolumeUp"></paper-fab>
-                                    <paper-fab icon="volume-off" class="btnCommand large subdued square" title="${ButtonMute}" data-command="ToggleMute"></paper-fab>
-                                    <paper-fab icon="info" class="btnCommand videoButton large subdued square" title="${ButtonOsd}" data-command="ToggleOsdMenu"></paper-fab>
-                                    <paper-fab icon="fullscreen" class="btnToggleFullscreen videoButton btnPlayStateCommand large subdued square" title="${ButtonFullscreen}" data-command="ToggleFullscreen"></paper-fab>
+                                    <paper-fab icon="volume-up" class="btnCommand subdued" title="${ButtonVolumeUp}" data-command="VolumeUp"></paper-fab>
+                                    <paper-fab icon="volume-off" class="btnCommand subdued" title="${ButtonMute}" data-command="ToggleMute"></paper-fab>
+                                    <paper-fab icon="info" class="btnCommand videoButton subdued" title="${ButtonOsd}" data-command="ToggleOsdMenu"></paper-fab>
+                                    <paper-fab icon="fullscreen" class="btnToggleFullscreen videoButton btnPlayStateCommand subdued" title="${ButtonFullscreen}" data-command="ToggleFullscreen"></paper-fab>
                                 </div>
                                 <div>
-                                    <paper-fab icon="volume-down" class="btnCommand large subdued square" title="${ButtonVolumeDown}" data-command="VolumeDown"></paper-fab>
-                                    <paper-fab icon="audiotrack" class="btnAudioTracks videoButton btnPlayStateCommand large subdued square" title="${ButtonAudioTracks}" data-command="GoToSearch"></paper-fab>
-                                    <paper-fab icon="subtitles" class="btnSubtitles videoButton btnPlayStateCommand large subdued square" title="${ButtonSubtitles}" data-command="GoToSearch"></paper-fab>
-                                    <paper-fab icon="movie" class="btnChapters videoButton btnPlayStateCommand large subdued square" title="${ButtonScenes}" data-command="GoToSearch"></paper-fab>
+                                    <paper-fab icon="volume-down" class="btnCommand subdued" title="${ButtonVolumeDown}" data-command="VolumeDown"></paper-fab>
+                                    <paper-fab icon="audiotrack" class="btnAudioTracks videoButton btnPlayStateCommand subdued" title="${ButtonAudioTracks}" data-command="GoToSearch"></paper-fab>
+                                    <paper-fab icon="subtitles" class="btnSubtitles videoButton btnPlayStateCommand subdued" title="${ButtonSubtitles}" data-command="GoToSearch"></paper-fab>
+                                    <paper-fab icon="movie" class="btnChapters videoButton btnPlayStateCommand subdued" title="${ButtonScenes}" data-command="GoToSearch"></paper-fab>
                                 </div>
                             </div>
                         </div>
@@ -65,32 +65,34 @@
                     <neon-animatable>
                         <div style="text-align:center;">
                             <div>
-                                <button type="button" data-role="none" title="${ButtonArrowUp}" class="btnArrowUp btnCommand imageButton" data-command="MoveUp"><i class="fa fa-arrow-up"></i></button>
+                                <paper-fab icon="keyboard-arrow-up" class="btnArrowUp btnCommand subdued" title="${ButtonArrowUp}" data-command="MoveUp"></paper-fab>
                             </div>
                             <div>
-                                <button type="button" data-role="none" title="${ButtonArrowLeft}" class="btnArrowLeft btnCommand imageButton" data-command="MoveLeft"><i class="fa fa-arrow-left"></i></button>
-                                <button type="button" data-role="none" title="${ButtonOk}" class="btnOk btnCommand imageButton" data-command="Select"><i class="fa fa-check"></i></button>
-                                <button type="button" data-role="none" title="${ButtonArrowRight}" class="btnArrowRight btnCommand imageButton" data-command="MoveRight"><i class="fa fa-arrow-right"></i></button>
+                                <paper-fab icon="keyboard-arrow-left" class="btnArrowLeft btnCommand subdued" title="${ButtonArrowLeft}" data-command="MoveLeft"></paper-fab>
+
+                                <paper-fab icon="check" class="btnOk btnCommand subdued" title="${ButtonOk}" data-command="Select"></paper-fab>
+                                <paper-fab icon="keyboard-arrow-right" class="btnArrowRight btnCommand subdued" title="${ButtonArrowRight}" data-command="MoveRight"></paper-fab>
                             </div>
                             <div>
-                                <button type="button" data-role="none" title="${ButtonArrowDown}" class="btnArrowDown btnCommand imageButton" data-command="MoveDown"><i class="fa fa-arrow-down"></i></button>
+                                <paper-fab icon="keyboard-arrow-down" class="btnArrowDown btnCommand subdued" title="${ButtonArrowDown}" data-command="MoveDown"></paper-fab>
                             </div>
                             <div>
-                                <button data-icon="back" data-inline="true" data-iconpos="notext" title="${ButtonBack}" class="btnBack btnCommand" data-command="Back">${ButtonBack}</button>
-                                <button data-icon="info" data-inline="true" data-iconpos="notext" title="${ButtonInfo}" class="btnInfo btnCommand" data-command="ToggleContextMenu">${ButtonInfo}</button>
+                                <paper-fab icon="arrow-back" class="btnBack btnCommand subdued" title="${ButtonBack}" data-command="Back"></paper-fab>
+                                <paper-fab icon="info" class="btnInfo btnCommand subdued" title="${ButtonInfo}" data-command="ToggleContextMenu"></paper-fab>
                             </div>
                             <br />
                             <div>
-                                <button type="button" data-role="none" title="${ButtonHome}" class="btnGoHome btnCommand imageButton" data-command="GoHome"><i class="fa fa-home"></i></button>
+                                <paper-fab icon="home" class="btnGoHome btnCommand subdued" title="${ButtonHome}" data-command="GoHome"></paper-fab>
+
                                 <!--<button data-inline="true" data-iconpos="right" title="${ButtonPageUp}" data-icon="plus" class="btnPageUp btnCommand ui-nodisc-icon" data-command="PageUp">${PageButtonAbbreviation}</button>
                                 <button data-inline="true" data-iconpos="right" title="${ButtonLetterUp}" data-icon="plus" class="btnLetterUp btnCommand ui-nodisc-icon" data-command="NextLetter">${LetterButtonAbbreviation}</button>-->
-                                <button type="button" data-role="none" title="${ButtonSearch}" class="btnShowSearch btnCommand imageButton" data-command="GoToSearch"><i class="fa fa-search"></i></button>
+                                <paper-fab icon="search" class="btnShowSearch btnCommand subdued" title="${ButtonSearch}" data-command="GoToSearch"></paper-fab>
                             </div>
                             <div>
-                                <button type="button" data-role="none" title="${ButtonSettings}" class="bthShowSettings btnCommand imageButton" data-command="GoToSettings"><i class="fa fa-gear"></i></button>
+                                <paper-fab icon="settings" class="bthShowSettings btnCommand subdued" title="${ButtonSettings}" data-command="GoToSettings"></paper-fab>
                                 <!--<button data-inline="true" data-iconpos="right" title="${ButtonPageDown}" data-icon="minus" class="btnPageDown btnCommand ui-nodisc-icon" data-command="PageDown">${PageButtonAbbreviation}</button>
                                 <button data-inline="true" data-iconpos="right" title="${ButtonLetterDown}" data-icon="minus" class="btnLetterDown btnCommand ui-nodisc-icon" data-command="PreviousLetter">${LetterButtonAbbreviation}</button>-->
-                                <button type="button" data-role="none" title="${ButtonTakeScreenshot}" class="btnScreenshot btnCommand imageButton" data-command="TakeScreenshot"><i class="fa fa-video-camera"></i></button>
+                                <paper-fab icon="videocam" class="btnScreenshot btnCommand subdued" title="${ButtonTakeScreenshot}" data-command="TakeScreenshot"></paper-fab>
                             </div>
                         </div>
                         <div class="readOnlyContent" style="margin: 2em auto 0; padding: 0 1em 100px;">
@@ -151,13 +153,6 @@
                 </paper-tabs>
             </template>
 
-        </div>
-        <div data-role="popup" id="popupAudioTrackMenu">
-            <div class="trackList"></div>
-        </div>
-
-        <div data-role="popup" id="popupSubtitleTrackMenu">
-            <div class="trackList"></div>
         </div>
 
         <div class="chapterMenuOverlay" style="display: none;"></div>
