update dynamic images

--- a/MediaBrowser.WebDashboard/dashboard-ui/nowplaying.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/nowplaying.html
@@ -16,7 +16,7 @@
 
             <neon-animated-pages selected="{{selected}}" entry-animation="slide-from-right-animation" exit-animation="slide-left-animation">
                 <neon-animatable>
-                    <div style="text-align:center;padding-bottom:100px;">
+                    <div style="text-align:center;">
 
                         <div class="nowPlayingPageTitle" style="line-height: normal;">
                         </div>
