--- a/MediaBrowser.WebDashboard/dashboard-ui/nowplaying.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/nowplaying.html
@@ -56,6 +56,9 @@
                                 <paper-fab icon="movie" class="btnChapters videoButton btnPlayStateCommand subdued" title="${ButtonScenes}" data-command="GoToSearch"></paper-fab>
                             </div>
                         </div>
+                        <div class="nowPlayingPageUserDataButtons" style="margin-top:1.5em;">
+
+                        </div>
                     </div>
                 </neon-animatable>
                 <neon-animatable>
