--- a/MediaBrowser.WebDashboard/dashboard-ui/playlistedit.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/playlistedit.html
@@ -16,7 +16,7 @@
                 <div class="listTopPaging"></div>
                 <paper-button raised class="secondary btnPlay hide"><iron-icon icon="play-arrow"></iron-icon><span>${ButtonPlay}</span></paper-button>
             </div>
-            <div id="items" class="itemsContainer"></div>
+            <div id="items" class="itemsContainer" style="max-width:1000px;margin: 0 auto;"></div>
             <div class="noItemsMessage" style="display: none; text-align: center;">
                 <p>${MessageNoPlaylistItemsAvailable}</p>
             </div>
