--- a/MediaBrowser.WebDashboard/dashboard-ui/favorites.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/favorites.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="favoritesPage" data-role="page" class="page type-home libraryPage allLibraryPage backdropPage" data-backdroptype="movie,series,game,book" data-require="scripts/favorites,paperbuttonstyle">
+    <div id="favoritesPage" data-role="page" class="page libraryPage allLibraryPage backdropPage" data-backdroptype="movie,series,game,book" data-require="scripts/favorites,paperbuttonstyle">
 
         <div class="libraryViewNav scopedLibraryViewNav">
             <a href="index.html"><i class="material-icons">home</i>${TabHome}</a>
